# dioxus-tutorial

./: Cargo.toml  README.md
src/: main.rs
src/business/: Cargo.toml
src/business/src/: usecases.rs
src/business/src/usecases/: get_recruits.rs
src/domain/: Cargo.toml
src/domain/src/: repositories.rs
src/domain/src/repositories/: recruit.rs
src/infrastructure/: Cargo.toml
src/infrastructure/src/: drivers.rs  lib.rs
src/infrastructure/src/drivers/: recruit.rs
src/presentation/: Cargo.toml  index.html
src/presentation/src/: composition_root.rs  home.rs  hooks.rs  main.rs
src/presentation/src/components/organisms/: footer.rs  header.rs
src/presentation/src/containers/: home.rs  not_found.rs
src/presentation/src/hooks/: use_recruits.rs
